--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,24 @@
-asgiref @ file:///C:/Users/BUILDE~1/AppData/Local/Temp/abs_cchykh5sgr/croots/recipe/asgiref_1661287542702/work
+asgiref==3.5.2
 certifi==2023.7.22
 cffi==1.16.0
 charset-normalizer==3.3.1
 cryptography==41.0.5
-Django @ file:///C:/Users/BUILDE~1/AppData/Local/Temp/abs_eeor5o9jj8/croots/recipe/django_1661292534510/work
+Django==4.1
 django-cors-headers==4.3.0
 djangorestframework==3.14.0
+docopt==0.6.2
 idna==3.4
 jwt==1.3.1
+pip==23.3
+pipreqs==0.4.13
 pycparser==2.21
 PyJWT==2.8.0
 pytz==2023.3.post1
 requests==2.31.0
 scrypt==0.8.20
-sqlparse @ file:///C:/b/abs_88361ub_qu/croot/sqlparse_1690904577514/work
-tzdata @ file:///croot/python-tzdata_1690578112552/work
+setuptools==68.0.0
+sqlparse==0.4.4
+tzdata==2023.3
 urllib3==2.0.7
+wheel==0.41.2
+yarg==0.1.9
