--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,7 +45,8 @@
     "vue": "^3.2.36",
     "vue-echarts": "^6.2.3",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.14",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@arco-plugins/vite-vue": "^1.4.5",
