--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "pinia": "^2.1.7",
     "query-string": "^8.0.3",
     "sortablejs": "^1.15.0",
+    "typed.js": "^2.1.0",
     "vue": "^3.2.36",
     "vue-echarts": "^6.2.3",
     "vue-i18n": "^9.2.2",
