--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       bash -c
       "python3 manage.py makemigrations --settings=Model_Valhalla.settings_prod &&
       python3 manage.py migrate --settings=Model_Valhalla.settings_prod &&
-      python3 manage.py runserver --settings=Model_Valhalla.settings_prod"
+      python3 manage.py runserver 0.0.0.0:8000 --settings=Model_Valhalla.settings_prod"
     volumes:
       - .:/backend
     expose:
