--- a/backend/nginx/model_valhalla.conf
+++ b/backend/nginx/model_valhalla.conf
@@ -12,4 +12,13 @@ server {
   location /user {
     proxy_pass http://app:8000/user;
   }
+  location /dataset {
+    proxy_pass http://app:8000/dataset;
+  }
+  location /ranking {
+    proxy_pass http://app:8000/ranking;
+  }
+  location /testing {
+    proxy_pass http://app:8000/testing;
+  }
 }
