--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "query-string": "^8.0.3",
+    "regenerator-runtime": "^0.14.0",
     "sortablejs": "^1.15.0",
     "typed.js": "^2.1.0",
     "vue": "^3.2.36",
