--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
     "@types/lodash": "^4.14.186",
     "@types/mockjs": "^1.0.7",
     "@types/nprogress": "^0.2.0",
+    "@types/papaparse": "^5.3.14",
     "@types/sortablejs": "^1.15.0",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
