--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,32 +9,53 @@ alibabacloud-tea==0.3.3
 alibabacloud-tea-openapi==0.3.7
 alibabacloud-tea-util==0.3.11
 alibabacloud-tea-xml==0.0.2
+annotated-types==0.6.0
+anyio==3.7.1
 asgiref==3.5.2
 async-timeout==4.0.3
 attrs==23.1.0
+autoflake==2.2.1
 certifi==2023.7.22
 cffi==1.16.0
 charset-normalizer==3.3.1
+colorama==0.4.6
 cryptography==41.0.5
+distro==1.8.0
 Django==4.1
 django-cors-headers==4.3.0
 djangorestframework==3.14.0
 docopt==0.6.2
+exceptiongroup==1.2.0
 frozenlist==1.4.0
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.25.1
 idna==3.4
 jwt==1.3.1
 multidict==6.0.4
+numpy==1.26.2
+openai==1.3.5
+pandas==2.1.4
 Pillow==10.1.0
 pip==23.3
 pipreqs==0.4.13
 pycparser==2.21
+pydantic==2.5.2
+pydantic_core==2.14.5
+pyflakes==3.1.0
 PyJWT==2.8.0
 PyMySQL==1.1.0
+python-dateutil==2.8.2
 pytz==2023.3.post1
 requests==2.31.0
 scrypt==0.8.20
 setuptools==68.0.0
+six==1.16.0
+sniffio==1.3.0
 sqlparse==0.4.4
+tomli==2.0.1
+tqdm==4.66.1
+typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.0.7
 wheel==0.41.2
