--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,6 +19,7 @@ certifi==2023.7.22
 cffi==1.16.0
 charset-normalizer==3.3.1
 colorama==0.4.6
+coverage==7.3.4
 cryptography==41.0.5
 distro==1.8.0
 Django==4.1
@@ -31,7 +32,6 @@ h11==0.14.0
 httpcore==1.0.2
 httpx==0.25.1
 idna==3.4
-jwt==1.3.1
 multidict==6.0.4
 numpy==1.26.2
 openai==1.3.5
