--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,11 +3,13 @@
     "target": "ES2020",
     "module": "ES2020",
     "moduleResolution": "node",
-    "strict": true,
+    "strict": false,
     "jsx": "preserve",
     "sourceMap": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
+    "allowJs": true,
+    "suppressImplicitAnyIndexErrors": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
