--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,6 +28,7 @@ djangorestframework==3.14.0
 docopt==0.6.2
 exceptiongroup==1.2.0
 frozenlist==1.4.0
+gunicorn==21.2.0
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.25.1
@@ -35,6 +36,7 @@ idna==3.4
 multidict==6.0.4
 numpy==1.26.2
 openai==1.3.5
+packaging==23.2
 pandas==2.1.4
 Pillow==10.1.0
 pip==23.3
