--- a/backend/nginx/model_valhalla.conf
+++ b/backend/nginx/model_valhalla.conf
@@ -3,9 +3,9 @@ server {
   server_name app; # 绑定ip
 
   # 静态文件服务
-  location /static {
+  location /assets {
     autoindex on;
-    alias /backend/build/static;
+    alias /backend/build/assets;
   }
   
   # 代理
