--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite --config ./config/vite.config.dev.ts",
-    "build": "vue-tsc --noEmit && vite build --config ./config/vite.config.prod.ts",
+    "build": "vite build --config ./config/vite.config.prod.ts",
     "report": "cross-env REPORT=true npm run build",
     "preview": "npm run build && vite preview --host",
     "type:check": "vue-tsc --noEmit --skipLibCheck",
@@ -40,6 +40,7 @@
     "echarts": "^5.4.0",
     "lodash": "^4.17.21",
     "mitt": "^3.0.1",
+
     "nprogress": "^0.2.0",
     "papaparse": "^5.4.1",
     "pinia": "^2.1.7",
