--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,8 +39,8 @@
     "dayjs": "^1.11.5",
     "echarts": "^5.4.0",
     "lodash": "^4.17.21",
+    "logalot": "^2.1.0",
     "mitt": "^3.0.1",
-
     "nprogress": "^0.2.0",
     "papaparse": "^5.4.1",
     "pinia": "^2.1.7",
@@ -51,6 +51,7 @@
     "vue": "^3.2.36",
     "vue-echarts": "^6.2.3",
     "vue-i18n": "^9.2.2",
+    "vue-resource": "^1.5.3",
     "vue-router": "^4.0.14",
     "vuex": "^4.1.0"
   },
@@ -107,5 +108,7 @@
     "bin-wrapper": "npm:bin-wrapper-china",
     "rollup": "^2.56.3",
     "gifsicle": "5.2.0"
-  }
+  },
+  "main": ".eslintrc.js",
+  "keywords": []
 }
