still trying hard on urls...

--- a/backend/nginx/model_valhalla.conf
+++ b/backend/nginx/model_valhalla.conf
@@ -2,23 +2,23 @@ server {
   listen 8000; # 监听端口
   server_name app; # 绑定ip
 
-  # 静态文件服务
+  gzip on;
+  gzip_http_version 1.1;
+  gzip_comp_level 4;
+  gzip_types  text/plain application/javascript text/css;
+  gzip_min_length 1k;
+
   location /assets {
     autoindex on;
     alias /backend/build/assets;
   }
+
+  location /static {
+    proxy_pass http://app:8000/static;
+  }
   
   # 代理
-  location /user {
-    proxy_pass http://app:8000/user;
-  }
-  location /dataset {
-    proxy_pass http://app:8000/dataset;
-  }
-  location /ranking {
-    proxy_pass http://app:8000/ranking;
-  }
-  location /testing {
-    proxy_pass http://app:8000/testing;
+  location /api/v1/ {
+    proxy_pass http://app:8000/;
   }
 }
