--- a/backend/nginx/model_valhalla.conf
+++ b/backend/nginx/model_valhalla.conf
@@ -1,6 +1,6 @@
 server {
   listen 8000; # 监听端口
-  server_name app; # 绑定ip
+  server_name 43.138.44.44:8000;
 
   gzip on;
   gzip_http_version 1.1;
@@ -8,17 +8,29 @@ server {
   gzip_types  text/plain application/javascript text/css;
   gzip_min_length 1k;
 
+  location / {
+    try_files $uri $uri/ /index.html;
+  }
+
   location /assets {
     autoindex on;
     alias /backend/build/assets;
   }
 
-  location /static {
-    proxy_pass http://app:8000/static;
-  }
-  
   # 代理
   location /api/v1/ {
-    proxy_pass http://app:8000/;
+    proxy_pass http://modelv:8000/;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Host $server_name;
+  }
+
+  location /media/ {
+    proxy_pass http://modelv:8000/media/;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Host $server_name;
   }
 }
